tidy up some things

--- a/app/templates/baldspot.html
+++ b/app/templates/baldspot.html
@@ -11,7 +11,7 @@
     <div class="topbar">
       <div class="homebutton">
         <p>
-          <a href="/home">
+          <a href="/">
             <button>
               <img id="homeicon" src="../static/asset/houseicon.jpg" />
             </button>
