--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <nav class="navbar">
         <div class="home_button">
-          <a href="/home">
+          <a href="/">
             <button>
               <img class="icon" src="{{ url_for('static', filename='asset/home_button.png') }}" />
               <img class="icon-hover" src="{{ url_for('static', filename='asset/home_button_hover.png') }}" />
