--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -41,7 +41,7 @@
   <body>
     <nav class="navbar">
       <div class="home_button">
-        <a href="/home">
+        <a href="/">
           <button>
             <img class="icon" src="../static/asset/home_button.png" />
             <img
