--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <nav class="navbar">
         <div class="home_button">
-          <a href="/home">
+          <a href="/">
             <button>
               <img class="icon" src="../static/asset/home_button.png" />
               <img
