--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -32,7 +32,7 @@
             <button id="right-btn">Right</button>
           </div>
           <div class="go-chat-button">
-            <a href="/home">
+            <a href="/">
               <button id="save-btn">Go Chat!</button>
             </a>
           </div>
