--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <nav class="navbar">
         <div class="close_button">
-        <a href="/home">
+        <a href="/">
           <button>
             <img class="icon" src="../static/asset/close_button.png" />
             <img
@@ -45,7 +45,9 @@
       <div id="myModal" class="modal">
         <div class="modal-content">
           <!-- Close button for the modal -->
+          <a href="/profile">
           <span class="close">&times;</span>
+          </a>
           <!-- Modal content goes here -->
           <div class="avatar-container">
             <img src="../static/asset/avatar.png" alt="avatar" />
