fixed some routes

--- a/app/templates/about-us-page.html
+++ b/app/templates/about-us-page.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <nav class="navbar">
         <div class="home_button">
-          <a href="/home">
+          <a href="/">
             <button>
               <img class="icon" src="../static/asset/home_button.png" />
               <img
@@ -82,7 +82,7 @@
 
   <p class="Body">
     We are a group of second-year Computer Science students at Carleton College. 
-    This website was created as part of our Advanced Software Design class. The project uses Python and SQL for the backend, 
+    This website was created as part of our Advanced Software Design class. The project uses Python and MySQL for the backend, 
     and HTML, JavaScript, and CSS for the frontend. We use Docker to run the application.
   </p>
 
