--- a/app/templates/baldspot.html
+++ b/app/templates/baldspot.html
@@ -32,9 +32,8 @@
 
     <div class="lowerbar">
       <div class="dropdown">
-        <button id="settings">Settings</button>
+        <button id="aboutus">About Us</button>
         <div class="dropdown-content">
-          <a href="/aboutpage">About Page</a>
           <a href="/aboutus">About Us</a>
           <a href="/contact">Contact Us</a>
           <a href="/logout">Logout</a>
