--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -18,23 +18,23 @@
             </button>
           </a>
         </div>
-        <div class="setting_button">
+        <div class="aboutus_button">
           <button id="modal-btn">
-            <img class="icon" src="{{ url_for('static', filename='asset/setting_button.png') }}" alt="Setting" />
-            <img class="icon-hover" src="{{ url_for('static', filename='asset/setting_button_hover.png') }}" alt="Setting Hover" />
+            <img class="icon" src="{{ url_for('static', filename='asset/aboutus_button.png') }}" alt="About Us" />
+            <img class="icon-hover" src="{{ url_for('static', filename='asset/aboutus_button_hover.png') }}" alt="About Us Hover" />
           </button>
         </div>
 
         <!-- Modal or Popup -->
-        <div id="myModal" class="modal">
-          <div class="modal-content">
+        <!-- <div id="myModal" class="modal">
+          <div class="modal-content"> -->
             <!-- Close button for the modal -->
-            <span class="close">&times;</span>
+            <!-- <span class="close">&times;</span> -->
             <!-- Modal content goes here -->
-            <h2>Settings</h2>
+            <!-- <h2>Ss</h2>
             <p>This is the content of the modal. It can cover most of the screen.</p>
           </div>
-        </div>
+        </div> -->
 
         <div class="profile_button">
           <button>
