--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,17 +21,17 @@
             </button>
           </a>
         </div>
-        <div class="setting_button">
+        <div class="aboutus_button">
           <a href="/aboutus">
             <button id="modal-btn">
               <img
                 class="icon"
-                src="../static/asset/About-us.png"
+                src="../static/asset/aboutus_button.png"
                 alt="About Us"
               />
               <img
                 class="icon-hover"
-                src="../static/asset/About-us.png"
+                src="../static/asset/aboutus_button_hover.png"
                 alt="About Us Hover"
               />
             </button>
