--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -51,25 +51,27 @@
           </button>
         </a>
       </div>
-      <div class="setting_button">
-        <button id="modal-btn">
-          <img
-            class="icon"
-            src="../static/asset/setting_button.png"
-            alt="Setting"
-          />
-          <img
-            class="icon-hover"
-            src="../static/asset/setting_button_hover.png"
-            alt="Setting Hover"
-          />
-        </button>
+      <div class="aboutus_button">
+        <a href="/aboutus">
+          <button id="modal-btn">
+            <img
+              class="icon"
+              src="../static/asset/aboutus_button.png"
+              alt="About Us"
+            />
+            <img
+              class="icon-hover"
+              src="../static/asset/aboutus_button_hover.png"
+              alt="About Us Hover"
+            />
+          </button>
+        </a>
       </div>
 
       <div id="myModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2>Settings</h2>
+          <h2>About Us</h2>
           <p>
             This is the content of the modal. It can cover most of the screen.
           </p>
