--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -20,33 +20,35 @@
             </button>
           </a>
         </div>
-        <div class="setting_button">
-          <button id="modal-btn">
-            <img
-              class="icon"
-              src="../static/asset/setting_button.png"
-              alt="Setting"
-            />
-            <img
-              class="icon-hover"
-              src="../static/asset/setting_button_hover.png"
-              alt="Setting Hover"
-            />
-          </button>
+        <div class="aboutus_button">
+          <a href="/aboutus">
+            <button id="modal-btn">
+              <img
+                class="icon"
+                src="../static/asset/aboutus_button.png"
+                alt="About Us"
+              />
+              <img
+                class="icon-hover"
+                src="../static/asset/aboutus_button_hover.png"
+                alt="About Us Hover"
+              />
+            </button>
+          </a>
         </div>
 
         <!-- Modal or Popup -->
-        <div id="myModal" class="modal">
-          <div class="modal-content">
+        <!-- <div id="myModal" class="modal">
+          <div class="modal-content"> -->
             <!-- Close button for the modal -->
-            <span class="close">&times;</span>
+            <!-- <span class="close">&times;</span> -->
             <!-- Modal content goes here -->
-            <h2>Settings</h2>
+            <!-- <h2>Settings</h2>
             <p>
               This is the content of the modal. It can cover most of the screen.
             </p>
           </div>
-        </div>
+        </div> -->
 
         <div class="profile_button">
           <button>
