--- a/app/static/style_profile.css
+++ b/app/static/style_profile.css
@@ -270,7 +270,7 @@ button[type="submit"] {
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 3px;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
