tryna create room 2 for the lib

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
     <title>Carl Chat Main</title>
     <link rel="stylesheet" href="../static/style_home.css" />
     <script src="/static/js/baldspot.js"></script>
+    <script src="/static/js/library.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -96,8 +97,8 @@
         </div>
 
         <div class="library_button">
-          <a href="/library">
-            <button>
+          <a>
+            <button onclick="joinLibrary();">
               <img class="icon" src="../static/asset/location_button.png" />
               <img
                 class="icon-hover"
