--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="../static/style_library.css" />
+    <script>
+      var user_data = {{ user_data | tojson }};
+      var room_number = {{ num }};
+    </script>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style_library.css') }}"
+    />
     <script src="../static/js/socket_for_library.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <nav class="navbar">
         <div class="home_button">
-          <a href="/">
+          <a onclick="leaveRoom();">
             <button>
-              <img class="icon" src="../static/asset/home_button.png" />
+              <img
+                class="icon"
+                src="{{ url_for('static', filename='asset/home_button.png') }}"
+              />
               <img
                 class="icon-hover"
-                src="../static/asset/home_button_hover.png"
+                src="{{ url_for('static', filename='asset/home_button_hover.png') }}"
               />
             </button>
           </a>
@@ -25,35 +35,40 @@
           <button id="modal-btn">
             <img
               class="icon"
-              src="../static/asset/setting_button.png"
+              src="{{ url_for('static', filename='asset/setting_button.png') }}"
               alt="Setting"
             />
             <img
               class="icon-hover"
-              src="../static/asset/setting_button_hover.png"
+              src="{{ url_for('static', filename='asset/setting_button_hover.png') }}"
               alt="Setting Hover"
             />
           </button>
         </div>
+
+        <!-- Modal or Popup -->
         <div id="myModal" class="modal">
           <div class="modal-content">
+            <!-- Close button for the modal -->
             <span class="close">&times;</span>
+            <!-- Modal content goes here -->
             <h2>Settings</h2>
             <p>
               This is the content of the modal. It can cover most of the screen.
             </p>
           </div>
         </div>
+
         <div class="profile_button">
           <button>
             <img
               class="icon"
-              src="../static/asset/profile_button.png"
+              src="{{ url_for('static', filename='asset/profile_button.png') }}"
               alt="Profile"
             />
             <img
               class="icon-hover"
-              src="../static/asset/profile_button_hover.png"
+              src="{{ url_for('static', filename='asset/profile_button_hover.png') }}"
               alt="Profile Hover"
             />
           </button>
@@ -62,6 +77,7 @@
             <a href="/logout">Logout</a>
           </div>
         </div>
+
         <div class="userinfo">
           {% if username %}
           <p>Logged in as: {{ username }}!</p>
@@ -71,33 +87,73 @@
         </div>
       </nav>
       <div class="content">
-        <h1 class="intro">Library</h1>
+        <h1>Welcome to the Library, {{ username }}</h1>
+        <div id="usersList">
+          users: {% for user in users_list %}
+          <div class="user">
+            <img
+              src="{{ user.avatar_path }}"
+              alt="{{ user.username }}'s Avatar"
+            />
+            <p>{{ user.username }}</p>
+          </div>
+          {% endfor %}
+        </div>
         <h2>Choose your Favorite Floor and Listen to Music</h2>
-
         <div class="controls">
           <button id="muteButton">Mute</button>
           <label for="volumeControl">Volume: </label>
-          <input type="range" id="volumeControl" min="0" max="100" value="100">
-      </div>
+          <input
+            type="range"
+            id="volumeControl"
+            min="0"
+            max="100"
+            value="100"
+          />
+        </div>
         <div class="image-wrapper">
-          <img id="music_image" src="../static/asset/library.png" alt="Library" />
+          <img
+            id="music_image"
+            src="{{ url_for('static', filename='asset/library.png') }}"
+            alt="Library"
+          />
           <div id="section1" class="section"></div>
           <div id="section2" class="section"></div>
           <div id="section3" class="section"></div>
           <div id="section4" class="section"></div>
           <div class="user-avatar">
-              <img src="{{ user_data.avatar_path }}" alt="{{ user_data.username }}'s Avatar" />
+            <img
+              src="{{ url_for('static', filename='asset/' + user_data['avatar_path']) }}"
+              alt="{{ user_data['username'] }}'s Avatar"
+            />
+          </div>
+
+          <div id="avatars">
+            <!-- Avatars of other users will be appended here -->
+          </div>
+          <div id="usersList">
+            <!-- List of users will be appended here -->
           </div>
         </div>
-
-        <audio id="music1" src="../static/asset/sounds/music1.mp3"></audio>
-        <audio id="music2" src="../static/asset/sounds/music2.mp3"></audio>
-        <audio id="music3" src="../static/asset/sounds/music3.mp3"></audio>
-        <audio id="music4" src="../static/asset/sounds/music4.mp3"></audio>
-
+        <audio
+          id="music1"
+          src="{{ url_for('static', filename='asset/sounds/music1.mp3') }}"
+        ></audio>
+        <audio
+          id="music2"
+          src="{{ url_for('static', filename='asset/sounds/music2.mp3') }}"
+        ></audio>
+        <audio
+          id="music3"
+          src="{{ url_for('static', filename='asset/sounds/music3.mp3') }}"
+        ></audio>
+        <audio
+          id="music4"
+          src="{{ url_for('static', filename='asset/sounds/music4.mp3') }}"
+        ></audio>
       </div>
-
-    <script src="../static/js/modal.js"></script>
-    <script src="../static/js/moveavatar.js"></script>
+      <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/moveavatar.js') }}"></script>
+    </div>
   </body>
 </html>
