Fixed the update avatar in profile.html

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -46,7 +46,9 @@
         <div id="myModal" class="modal">
           <div class="modal-content">
             <!-- Close button for the modal -->
+            <a href="/profile">
             <span class="close">&times;</span>
+            </a>
             <!-- Modal content goes here -->
             <div class="avatar-container">
               <img src="../static/asset/avatar.png" alt="avatar" />
