--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -5,141 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="../static/style_library.css" />
-    <link rel="stylesheet" href="../static/music.css" />
-    <style>
-      .section {
-        position: absolute;
-        left: 0;
-        right: 0;
-        height: 20%;
-        cursor: pointer;
-      }
-      #section1 {
-        top: 40%;
-      }
-      #section2 {
-        top: 60%;
-      }
-      #section3 {
-        top: 80%;
-      }
-      #section4 {
-        top: 100%;
-      }
-      .clicked {
-        background-color: rgba(0, 0, 255, 0.3);
-      }
-      .image-wrapper {
-        position: relative;
-        text-align: center;
-      }
-      #music_image {
-        max-width: 100%;
-      }
-    </style>
+    <script src="../static/js/socket_for_library.js"></script>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="home_button">
-        <a href="/">
-          <button>
-            <img class="icon" src="../static/asset/home_button.png" />
-            <img
-              class="icon-hover"
-              src="../static/asset/home_button_hover.png"
-            />
-          </button>
-        </a>
-      </div>
-      <div class="aboutus_button">
-        <a href="/aboutus">
+    <div class="wrapper">
+      <nav class="navbar">
+        <div class="home_button">
+          <a href="/">
+            <button>
+              <img class="icon" src="../static/asset/home_button.png" />
+              <img
+                class="icon-hover"
+                src="../static/asset/home_button_hover.png"
+              />
+            </button>
+          </a>
+        </div>
+        <div class="setting_button">
           <button id="modal-btn">
             <img
               class="icon"
-              src="../static/asset/aboutus_button.png"
-              alt="About Us"
+              src="../static/asset/setting_button.png"
+              alt="Setting"
             />
             <img
               class="icon-hover"
-              src="../static/asset/aboutus_button_hover.png"
-              alt="About Us Hover"
+              src="../static/asset/setting_button_hover.png"
+              alt="Setting Hover"
             />
           </button>
-        </a>
-      </div>
-
-      <div id="myModal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h2>About Us</h2>
-          <p>
-            This is the content of the modal. It can cover most of the screen.
-          </p>
         </div>
-      </div>
-
-      <div class="profile_button">
-        <button>
-          <img
-            class="icon"
-            src="../static/asset/profile_button.png"
-            alt="Profile"
-          />
-          <img
-            class="icon-hover"
-            src="../static/asset/profile_button_hover.png"
-            alt="Profile Hover"
-          />
-        </button>
-        <div class="dropdown-content">
-          <a href="/profile">Profile</a>
-          <a href="/logout">Logout</a>
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Settings</h2>
+            <p>
+              This is the content of the modal. It can cover most of the screen.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="userinfo">
-        {% if username %}
-        <p>Logged in as: {{ username }}!</p>
-        {% else %}
-        <p>Playing as: guest!</p>
-        {% endif %}
-      </div>
-    </nav>
+        <div class="profile_button">
+          <button>
+            <img
+              class="icon"
+              src="../static/asset/profile_button.png"
+              alt="Profile"
+            />
+            <img
+              class="icon-hover"
+              src="../static/asset/profile_button_hover.png"
+              alt="Profile Hover"
+            />
+          </button>
+          <div class="dropdown-content">
+            <a href="/profile">Profile</a>
+            <a href="/logout">Logout</a>
+          </div>
+        </div>
+        <div class="userinfo">
+          {% if username %}
+          <p>Logged in as: {{ username }}!</p>
+          {% else %}
+          <p>Playing as: guest!</p>
+          {% endif %}
+        </div>
+      </nav>
+      <div class="content">
+        <h1 class="intro">Library</h1>
+        <h2>Choose your Favorite Floor and Listen to Music</h2>
 
-    <div class="container">
-      <div class="left-col">
-        <h1>Choose <br />Your <br />Vibe</h1>
-        <select id="songSelector">
-          <option value="asset/sounds/music1.mp3">Song 1</option>
-          <option value="asset/sounds/music2.mp3">Song 2</option>
-          <option value="asset/sounds/music3.mp3">Song 3</option>
-          <option value="asset/sounds/music4.mp3">Song 4</option>
-          <option value="asset/sounds/music5.mp3">Song 5</option>
-        </select>
+        <div class="controls">
+          <button id="muteButton">Mute</button>
+          <label for="volumeControl">Volume: </label>
+          <input type="range" id="volumeControl" min="0" max="100" value="100">
       </div>
+        <div class="image-wrapper">
+          <img id="music_image" src="../static/asset/library.png" alt="Library" />
+          <div id="section1" class="section"></div>
+          <div id="section2" class="section"></div>
+          <div id="section3" class="section"></div>
+          <div id="section4" class="section"></div>
+          <div class="user-avatar">
+              <img src="{{ user_data.avatar_path }}" alt="{{ user_data.username }}'s Avatar" />
+          </div>
+        </div>
 
-      <div class="right-col">
-        <p>Click Here To Listen to music</p>
-        <img src="../static/asset/Play.png" id="icon" />
+        <audio id="music1" src="../static/asset/sounds/music1.mp3"></audio>
+        <audio id="music2" src="../static/asset/sounds/music2.mp3"></audio>
+        <audio id="music3" src="../static/asset/sounds/music3.mp3"></audio>
+        <audio id="music4" src="../static/asset/sounds/music4.mp3"></audio>
+
       </div>
-    </div>
-
-    <audio id="mysound"></audio>
-
-    <div class="content">
-      <h1 class="intro">Library</h1>
-      <h2>Choose your favorite floor and Listen to music</h2>
-
-      <div class="image-wrapper">
-        <img id="music_image" src="../static/asset/library.png" alt="Library" />
-        <div id="section1" class="section"></div>
-        <div id="section2" class="section"></div>
-        <div id="section3" class="section"></div>
-        <div id="section4" class="section"></div>
-      </div>
-    </div>
 
     <script src="../static/js/modal.js"></script>
-    <script src="../static/js/musicplayer.js"></script>
-    <script src="../static/js/library.js"></script>
+    <script src="../static/js/moveavatar.js"></script>
   </body>
 </html>
