tryna fix the lib

--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -14,7 +14,7 @@
     />
     <script src="../static/js/socket_for_library.js"></script>
   </head>
-  <body>
+  <body onload="initializeSocket();">
     <div class="wrapper">
       <nav class="navbar">
         <div class="home_button">
