--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -19,10 +19,12 @@
           </a>
         </div>
         <div class="aboutus_button">
-          <button id="modal-btn">
-            <img class="icon" src="{{ url_for('static', filename='asset/aboutus_button.png') }}" alt="About Us" />
-            <img class="icon-hover" src="{{ url_for('static', filename='asset/aboutus_button_hover.png') }}" alt="About Us Hover" />
-          </button>
+          <a href="/aboutus">
+            <button id="modal-btn">
+              <img class="icon" src="{{ url_for('static', filename='asset/aboutus_button.png') }}" alt="About Us" />
+              <img class="icon-hover" src="{{ url_for('static', filename='asset/aboutus_button_hover.png') }}" alt="About Us Hover" />
+            </button>
+          </a>
         </div>
 
         <!-- Modal or Popup -->
