--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -83,55 +83,6 @@
   
     <script src="../static/js/modal.js"></script>
     <script src="../static/js/choose.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        // Fetch the avatar path and update the image source
-        fetch("/get_avatar_path")
-          .then((response) => response.json())
-          .then((data) => {
-            document.getElementById("profile-avatar").src = data.avatar_path;
-            document.querySelector(".avatar-container img").src =
-              data.avatar_path;
-          });
-
-        // Handle update username form submission
-        document
-          .getElementById("update-username-form")
-          .addEventListener("submit", function (event) {
-            event.preventDefault();
-            const newUsername = document.getElementById("new-username").value;
-            fetch("/update_username", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({ new_username: newUsername }),
-            })
-              .then((response) => response.json())
-              .then((data) => {
-                alert(data.message);
-              });
-          });
-
-        // Handle update password form submission
-        document
-          .getElementById("update-password-form")
-          .addEventListener("submit", function (event) {
-            event.preventDefault();
-            const newPassword = document.getElementById("new-password").value;
-            fetch("/update_password", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({ new_password: newPassword }),
-            })
-              .then((response) => response.json())
-              .then((data) => {
-                alert(data.message);
-              });
-          });
-      });
-    </script>
+    <script src="../static/js/profile.js"></script>
   </body>
 </html>
