--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -21,29 +21,36 @@
             </button>
           </a>
         </div>
-        <div class="setting_button">
-          <button id="modal-btn">
-            <img
-              class="icon"
-              src="../static/asset/setting_button.png"
-              alt="Setting"
-            />
-            <img
-              class="icon-hover"
-              src="../static/asset/setting_button_hover.png"
-              alt="Setting Hover"
-            />
-          </button>
+        <div class="aboutus_button">
+          <a href="/aboutus">
+            <button id="modal-btn">
+              <img
+                class="icon"
+                src="../static/asset/aboutus_button.png"
+                alt="About Us"
+              />
+              <img
+                class="icon-hover"
+                src="../static/asset/aboutus_button_hover.png"
+                alt="About Us Hover"
+              />
+            </button>
+          </a>
         </div>
-        <div id="myModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Settings</h2>
+
+        <!-- Modal or Popup -->
+        <!-- <div id="myModal" class="modal">
+          <div class="modal-content"> -->
+            <!-- Close button for the modal -->
+            <!-- <span class="close">&times;</span> -->
+            <!-- Modal content goes here -->
+            <!-- <h2>Settings</h2>
             <p>
               This is the content of the modal. It can cover most of the screen.
             </p>
           </div>
-        </div>
+        </div> -->
+
         <div class="profile_button">
           <button>
             <img
@@ -62,6 +69,7 @@
             <a href="/logout">Logout</a>
           </div>
         </div>
+
         <div class="userinfo">
           {% if username %}
           <p>Logged in as: {{ username }}!</p>
@@ -70,6 +78,7 @@
           {% endif %}
         </div>
       </nav>
+      
       <div class="content">
         <h1 class="intro">Library</h1>
         <h2>Choose your Favorite Floor and Listen to Music</h2>
