--- a/app/static/style_sayles.css
+++ b/app/static/style_sayles.css
@@ -266,3 +266,48 @@ h2 {
   font-size: large;
 }
 
+/* 
+#waitingMessage {
+  max-width: 40%;
+  z-index: 100;
+  position : relative;
+  justify-content: center;
+  align-items: center; */
+  /* width: 70px; Set the width of the icon */
+  /* height: 70px; Set the height of the icon */
+  /* top: 0;
+  left: 0;
+  bottom : 0;
+  right: 0;
+  margin: auto;
+  
+}
+
+#waitingMessageText{
+  text-align: center;
+} */
+
+#waitingMessageText {
+  display: none; /* Initially hidden */
+  font-size: 20px;
+  color: black;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#waitingMessage {
+  display: none;
+  text-align: center;
+}
+
+#waitingMessage img {
+  width: 50px; 
+  height: 50px;
+  align-items: center;
+}
+
+
+.container {
+  text-align: center;
+  z-index: 100;
+}
