Headers for all the files describing what its been doing

--- a/app/static/about-us-page.css
+++ b/app/static/about-us-page.css
@@ -1,6 +1,9 @@
-/*
-    CSS for the about us page that has a description of the authors.
-*/
+/* 
+about-us-page.css
+Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+Updated: May 31, 2024 
+CSS file for the about-us-page.html  where there is the desciption of the users
+ */
 
 
 @font-face {
