--- a/app/static/music.css
+++ b/app/static/music.css
@@ -1,3 +1,11 @@
+/* 
+music.css
+Authors: Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+Updated: May 31, 2024 
+CSS file for the music elemnt in the library
+ */
+
+
 @font-face {
   font-family: "font1";
   src: url("../static/font.ttf") format("truetype");
