--- a/app/static/registerandlogin.css
+++ b/app/static/registerandlogin.css
@@ -1,4 +1,10 @@
-/* registerandlogin.css */
+/* 
+registerandlogin.css
+Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+Updated: May 31, 2024 
+CSS file for both the register and the login pages.
+ */
+
 
 @font-face {
   font-family: "font1";
