--- a/app/static/style_chatroom.css
+++ b/app/static/style_chatroom.css
@@ -1,4 +1,12 @@
-@font-face {
+/* 
+registerandlogin.css
+Authors: Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+Updated: May 31, 2024 
+CSS file for the chatroom.
+ */
+
+
+font-face {
   font-family: "font1";
   src: url("../static/font.ttf") format("truetype");
 }
