--- a/app/templates/about-us-page.html
+++ b/app/templates/about-us-page.html
@@ -1,3 +1,10 @@
+
+    <!-- about-us-page.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the about us page
+  -->
+
 <!DOCTYPE html>
 <html>
 <head>
