--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -1,3 +1,10 @@
+    <!-- charoomt.html
+     Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the chatroom where users can chat, it is html for both the one to one as well as the global chat.
+  -->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
