--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -1,3 +1,11 @@
+  <!-- library.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the library page where you can go to different floors and 
+    then different music will be played when you go to each of the floors.
+  -->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
