--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,3 +1,12 @@
+  <!-- login.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the login page where users can login.
+  -->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
