--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,3 +1,13 @@
+ <!-- profile.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the profile page where users can choose different avatars as well as change their username as well as password.
+  -->
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
