--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -1,3 +1,12 @@
+<!-- sayles.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the sayles page which contsins the one to one chat as well 
+    as can choose different kind of food items.
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -123,6 +132,7 @@
       <p id="waitingMessage" style="display: none;">
         <img
         src="../static/asset/Loading_Button.gif" alt="Loading..." /> 
+
       </p>
       </div>
 
