--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,3 +1,9 @@
+ <!-- welcome.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the welcome page where you choose different avatars.
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
