--- a/app/static/style_home.css
+++ b/app/static/style_home.css
@@ -1,3 +1,10 @@
+/* 
+style_home.css
+Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+Updated: May 31, 2024 
+CSS file for the home page.
+ */
+
 @font-face {
   font-family: "font1";
   src: url("../static/font.ttf") format("truetype");
