--- a/app/templates/baldspot.html
+++ b/app/templates/baldspot.html
@@ -1,3 +1,9 @@
+    <!-- baldspot.html
+    Kritika Pandit,Daniel Lumbu, Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the baldspot area which consists of the global chat area.
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
