--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,3 +1,11 @@
+ <!-- register.html
+    Daniel Lumbu, Kritika Pandit Daniel Estrada, Alex Wcislo,Palmy Klangsathorn
+    Updated: May 31, 2024 
+    This is html for the  register where users first register wih their usernames and password.
+  -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
